[Sonar] Improvements